got rid of .. in front of the main background url address location cuz I am opening it from html file instead of local:3000

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ body{
         font-size: 12px;
     }
     body{
-        background: url("../image/main_1_cover.svg") center center fixed;
+        background: url("image/main_1_cover.svg") center center fixed;
         background-size: cover;
     }
     /* loading animation */
@@ -657,19 +657,19 @@ body{
         /* multiple background  */
         background:
             /*the main background*/
-            url(../image/main_1_cover.svg) center,
-            url(../image/main_1_cover.svg) 40% 50%,
+            url(image/main_1_cover.svg) center,
+            url(image/main_1_cover.svg) 40% 50%,
             /*repeat the left part*/
-            url(../image/main_1_cover.svg) 30% 50%,
-            url(../image/main_1_cover.svg) 20% 50%,
-            url(../image/main_1_cover.svg) 10% 50%,
-            url(../image/main_1_cover.svg) 0% 50%,
+            url(image/main_1_cover.svg) 30% 50%,
+            url(image/main_1_cover.svg) 20% 50%,
+            url(image/main_1_cover.svg) 10% 50%,
+            url(image/main_1_cover.svg) 0% 50%,
             /*repeat the right part*/
-            url(../image/main_1_cover.svg) 60% 50%,
-            url(../image/main_1_cover.svg) 70% 50%,
-            url(../image/main_1_cover.svg) 80% 50%,
-            url(../image/main_1_cover.svg) 90% 50%,
-            url(../image/main_1_cover.svg) 100% 50%;
+            url(image/main_1_cover.svg) 60% 50%,
+            url(image/main_1_cover.svg) 70% 50%,
+            url(image/main_1_cover.svg) 80% 50%,
+            url(image/main_1_cover.svg) 90% 50%,
+            url(image/main_1_cover.svg) 100% 50%;
         background-repeat:no-repeat;
         background-size:contain;         
     }
