--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body{
     transform: translateX(-50%) translateY(-50%);
 } */
 
-.langBtn {
+.langBtnMain {
     color: white;
     background-color: transparent;
     border-radius: 20%;
