page 1,2 - doesn't show the map. circles in map can't be shown above background with a higher z-index than the map. working on text alignments.

--- a/after_merge/body1_JL.ejs
+++ b/after_merge/body1_JL.ejs
@@ -23,14 +23,28 @@
   <p class="lang" key="tutorial6" id="tutorialSaferPath"></p>
 </div>
 
-<div id="mapBackground">
-  <!-- <a href="#" class="btn_mylct"><img src="../image/position.png" width="40px" height="40px"></img></a> -->
-</div> 
-
+<div id="mapBackground"></div> 
 <div id="mapBackground2"></div> 
 <div id="mapBackground3"></div> 
 <div id="mapBackground4"></div> 
 <div id="mapBackground5"></div>
+
+<img class="tutorialSafe" id="tutorialSafe1" src="image/safeDot.png"></img>
+<img class="tutorialSafe" id="tutorialSafe2" src="image/safeDot.png"></img>
+<img class="tutorialSafe" id="tutorialSafe3" src="image/safeDot.png"></img>
+<img class="tutorialSafe" id="tutorialSafe4" src="image/safeDot.png"></img>
+<img class="tutorialSafe" id="tutorialSafe5" src="image/safeDot.png"></img>
+<img class="tutorialSafe" id="tutorialSafe6" src="image/safeDot.png"></img>
+<img class="tutorialSafe" id="tutorialSafe7" src="image/safeDot.png"></img>
+
+<img class="tutorialNotSafe" id="tutorialNotSafe1" src="image/orangedot.png"></img>
+<img class="tutorialNotSafe" id="tutorialNotSafe2" src="image/orangedot.png"></img>
+<img class="tutorialNotSafe" id="tutorialNotSafe3" src="image/orangedot.png"></img>
+<img class="tutorialNotSafe" id="tutorialNotSafe4" src="image/orangedot.png"></img>
+<img class="tutorialNotSafe" id="tutorialNotSafe5" src="image/orangedot.png"></img>
+<img class="tutorialNotSafe" id="tutorialNotSafe6" src="image/orangedot.png"></img>
+<img class="tutorialNotSafe" id="tutorialNotSafe7" src="image/orangedot.png"></img>
+
 
 <div class="tutorialList">
   <img id="tutorialOrangeSpot" src="image/orangespot.png"></img>
