--- a/after_merge/body1_JL.ejs
+++ b/after_merge/body1_JL.ejs
@@ -14,8 +14,7 @@
 
 <div id="tutorialPages">
   <p class="lang" key="tutorial1" id="tutorialGreen"></p>
-  <p class="lang" key="tutorial2-1" id="tutorialOrange1"></p>
-  <p class="lang" key="tutorial2-2" id="tutorialOrange2"></p>
+  <p class="lang" key="tutorial2" id="tutorialOrange"></p>
   <p class="lang" key="tutorial3" id="tutorialTab"></p>
   <p class="lang" key="tutorial4-1" id="tutorialOrangeIcon1"></p>
   <p class="lang" key="tutorial4-2" id="tutorialOrangeIcon2"></p>
